--- a/ultimate-react-course-main/11-worldwise/worldwise/package.json
+++ b/ultimate-react-course-main/11-worldwise/worldwise/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "json-server": "^0.17.4",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
@@ -25,7 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5",
+    "vite": "^7.0.6",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
